feat: update content

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <section data-transition="fade-in slide-out">
           <h3>Angular's Reactive Nature</h3>
           <ul>
-            <li>Angular is a framework developed by Google</li>
-            <li>"Reactivity" is one of the core principles</li>
+            <li>Angular is a front end framework</li>
+            <li>Angular's "Reactivity"</li>
             <li>Angular relies on RxJS</li>
           </ul>
         </section>
@@ -52,11 +52,10 @@
         <section data-transition="fade-in slide-out">
           <h3>What is RxJS?</h3>
           <ul>
-            <li>Library for reactive programming </li>
-            <li>Enables developers to work with asynchronous data streams</li>
+            <li>Library for reactive programming</li>
+            <li>Provides asynchronous data streams</li>
             <li
-              >Streams can represent events, HTTP requests, user interactions
-              etc.</li
+              >Streams can represent events, HTTP requests, user interactions</li
             >
           </ul>
         </section>
@@ -68,12 +67,12 @@
               >RxJS observables and operators are used for:
               <ul style="font-size: 2rem"
                 ><li>event handling</li>
-                <li>data manipoation</li>
+                <li>data manipulation</li>
                 <li>asynchronous operations</li></ul
               >
               <br />
             </li>
-            <li>Enables developers to work with asynchronous data streams</li>
+            <li>Pocessing asynchronous data streams</li>
             <img src="./assets/dog.png" alt="dog" style="display: block;margin: 0px auto;" width="300">
           </ul>
         </section>
@@ -140,14 +139,14 @@ data.subscribe({
             <li style="font-style: italic; color: pink; font-size: 2rem;"
               >Reactive UI Updates
               <br>
-              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Change detection mechanism works seamlessly with RxJS observables</li><li>Updates to observable data automatically trigger UI changes</li></ul>
+              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Data updates trigger UI changes</li></ul>
               <br />
 
             </li>
              <li style="font-style: italic; color: pink; font-size: 2rem;"
               >Easier Error Handling
               <br>
-              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Error handling mechanisms within observables</li>  <li>Simplified the management of errors in asynchronous operations</li></ul>
+              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Simplified the management of errors in asynchronous operations</li></ul>
               <br />
 
             </li>
@@ -168,14 +167,14 @@ data.subscribe({
             <li style="font-style: italic; color: pink; font-size: 2rem;"
               >Cross-Component Communication
               <br>
-              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Communication between components through observable streams</li><li>Components can react to changes and share data without direct dependencies</li></ul>
+              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Components can react to changes and share data without direct dependencies</li></ul>
               <br />
 
             </li>
              <li style="font-style: italic; color: pink; font-size: 2rem;"
               >Composability and Reusability
               <br>
-              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"><li>Code reusability and composability</li>  <li>Complex asynchronous logic can be encapsulated into reusable functions</li></ul>
+              <ul style="font-style: normal; color: white; font-size: 2rem;list-style: circle;"> <li>Complex asynchronous logic can be encapsulated into reusable functions</li></ul>
               <br />
 
             </li>
@@ -276,7 +275,7 @@ source.pipe(
             </li>
             <br>
              <li style="font-style: italic; color: pink; font-size: 2rem;"
-              >RxJS operators significantly enhance the capabilities of Angular applications. By combining operators, developers can build complex reactive systems with ease
+              >RxJS operators significantly enhance the capabilities of Angular applications.
             </li>
           </ul>
             <img src="./assets/event.png" alt="keyboard" width="300" style="position: absolute;">
